# s07-emlov4-hyperparams

./: .gitignore  Dockerfile  README.md  best_model_checkpoint.txt  dvc.yaml  pyproject.toml  report.md
.dvc/: config
.github/workflows/: ci-pipeline.yml  docker-build.yml  docker-test.yml  dvc-pipeline.yml
configs/: infer.yaml
configs/callbacks/: model_checkpoint.yaml
configs/experiment/: catdog_ex.yaml  dogbreed_ex.yaml  dogbreed_ex_train.yaml
configs/hparams/: catdog_ex_vit_hparam.yaml
configs/logger/: comet.yaml
configs/trainer/: default.yaml
scripts/: multirun_metrics_fetch.py
src/: infer.py  train.py
src/models/: cat_dog_classifier.py
tests/: test_infer.py
